css percentages reduced

--- a/about.html
+++ b/about.html
@@ -29,9 +29,9 @@
                                  </li>
                             </ul>
                                 <div class="social d-flex align-middle">   
-                                      <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                                      <a href="#"><i class="fa-brands fa-facebook px-1"></i></a>
-                                     <a href="#"> <i class="fa-brands fa-instagram"></i></a>
+                                      <a href="#"><i class="fa-brands fa-twitter text-primary"></i></a>
+                                      <a href="#"><i class="fa-brands fa-facebook px-1 text-primary"></i></a>
+                                     <a href="#"> <i class="fa-brands fa-instagram text-primary"></i></a>
                                 </div>  
                       </div>
                       
@@ -41,7 +41,7 @@
                    <div class="container">
                        <div class="text-center dull-white">
                                  <h1 class="pt-5 text-light">About Us</h1>  
-                                 <p class="pb-5 fs-4 fw-light">We serve the best</p>
+                                 <p class="pb-5 fs-4 fw-light text-light">We serve the best</p>
                                  <a href="#about" class="btn btn-primary border-0 px-5">Learn More</a>
                        </div>
                    </div>
