--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                                  </li>
                             </ul>
                                 <div class="social d-flex align-middle">   
-                                      <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                                      <a href="#"><i class="fa-brands fa-facebook px-1"></i></a>
-                                     <a href="#"> <i class="fa-brands fa-instagram"></i></a>
+                                      <a href="#"><i class="fa-brands fa-twitter text-primary"></i></a>
+                                      <a href="#"><i class="fa-brands fa-facebook px-1 text-primary"></i></a>
+                                     <a href="#"> <i class="fa-brands fa-instagram text-primary"></i></a>
                                 </div>  
                       </div>
                       
@@ -41,7 +41,7 @@
                    <div class="container">
                        <div class="text-center dull-white">
                                  <h1 class="pt-5 text-light">Welcome to Demand</h1>  
-                                 <p class="pb-5 fs-4 fw-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                                 <p class="pb-5 fs-4 fw-light text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
                                  <a href="#start" class="btn btn-primary border-0 px-5">Get Started</a>
                        </div>
                    </div>
@@ -56,7 +56,7 @@
                         <div class="col-lg-4 item">
                             <div class="card border-0 mb-1">
                                   <div class="text-center text-dark item-box p-3">
-                                            <img src="./img/filetype-html.svg" alt="" class="img">
+                                            <img src="./img/filetype-html.svg" alt="" class="bg-info rounded-circle p-3">
                                             <h3 class="py-2">Lorem Ipsum</h3>
                                             <p class="fs-6">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
                                    </div>
@@ -65,7 +65,7 @@
                         <div class="col-lg-4 item">
                                 <div class="card border-0 mb-1">
                                         <div class="text-center text-dark  item-box p-3">
-                                                    <img src="./img/dribbble.svg" alt="" class="img">
+                                                    <img src="./img/dribbble.svg" alt="" class="bg-info rounded-circle p-3">
                                                     <h3 class="py-2">Lorem Ipsum</h3>
                                                     <p class="fs-6">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
                                         </div>
@@ -74,7 +74,7 @@
                         <div class="col-lg-4 item">
                                 <div class="card border-0 mb-1">
                                          <div class="text-center text-dark  item-box p-3">
-                                                   <img src="./img/speedometer2.svg" alt="" class="img">
+                                                   <img src="./img/speedometer2.svg" alt="" class="bg-info rounded-circle p-3">
                                                     <h3 class="py-2">Lorem Ipsum</h3>
                                                     <p class="fs-6">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
                                          </div>
